--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3.9"
 services:
   backend:
+    container_name: 'backend'
     build:
       context: ./backend
     ports:
-      - "3001:3001"
+      - "3000:3000"
     env_file: backend/.env
     networks:
       - back
@@ -14,6 +15,7 @@ services:
     restart: unless-stopped
 
   frontend:
+    container_name: 'frontend'
     build:
       context: ./frontend
     ports:
@@ -21,6 +23,7 @@ services:
     restart: unless-stopped
 
   postgres:
+    container_name: 'database'
     image: postgres:alpine
     env_file: .env.db
     networks:
