better typeorm migrations workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: 'backend'
     build:
       context: ./backend
+      network: container:database
     ports:
       - "3000:3000"
     env_file: backend/.env
